# advent-of-code

./: .gitignore  README.md
1/paljak/: large.hs
10/paljak/: small.hs
11/mirof/: task_1  task_1.hs
11/paljak/: large.hs
12/mirof/: task_2.hs
12/paljak/: large.hs
13/mirof/: task_1.hs  task_2.hs
13/paljak/: large.hs
14/mirof/: task_1.hs
15/mirof/: task_1.hs  task_2.hs
15/paljak/: large.hs
16/paljak/: large.hs  small.hs
17/mirof/: task_1.hs  task_2.hs
17/paljak/: large.hs  small.hs
18/mirof/: task_2.hs
18/paljak/: small.hs
19/mirof/: task_1.hs  task_2.hs
20/mirof/: lala  task_1.hs  task_2.hs
20/paljak/: small.hs
2020/1/mirof/: task_1.hs  task_2.hs
2020/1/paljak/: small.hs
2020/10/mirof/: task_1.hs  task_2.hs
2020/10/paljak/: large.hs
2020/11/mirof/: task_1.hs  task_2.hs
2020/11/paljak/: small.hs
2020/12/mirof/: task_1.hs
2020/12/paljak/: small.hs
2020/13/paljak/: small.hs
2020/14/mirof/: task_2.hs
2020/14/paljak/: large.hs  small.hs
2020/15/paljak/: small.hs
2020/16/mirof/: task_1.hs  task_2.hs
2020/18/mirof/: task_1.hs
2020/18/paljak/: large.hs
2020/19/mirof/: problem_2.txt  task_1
2020/19/paljak/: large.hs  small.hs
2020/2/mirof/: task_1.hs  task_2.hs
2020/2/paljak/: large.hs  small.hs
2020/20/paljak/: large.hs
2020/21/paljak/: large.hs  small.hs
2020/22/mirof/: task_1.hs  task_2.hs
2020/23/mirof/: task_2.hs
2020/24/paljak/: large.hs  small.hs
2020/3/mirof/: task_2.hs
2020/3/paljak/: small.hs
2020/4/mirof/: task_1.hs
2020/5/mirof/: task_2.hs
2020/6/mirof/: task_2.hs
2020/6/paljak/: large.hs  small.hs
2020/7/mirof/: task_1.hs
2020/7/paljak/: small.hs
2020/8/paljak/: small.hs
2020/9/mirof/: task_1.hs
2020/9/paljak/: large.hs  small.hs
2021/: README.md
2021/ante/d1/: d1a.cpp  d1b.cpp
2021/ante/d10/: d9a.cpp  d9b.cpp
2021/ante/d11/: d11a.cpp  d11b.cpp
2021/ante/d12/: d12a.cpp  d12b.cpp
2021/ante/d13/: d13a.cpp  d13b.cpp
2021/ante/d14/: d14a.cpp  d14b.cpp
2021/ante/d15/: d15a.cpp  d15b.cpp
2021/ante/d16/: d16a.cpp  d16b.cpp
2021/ante/d17/: d17a.cpp  d17b.cpp
2021/ante/d18/: d18a.cpp  d18b.cpp
2021/ante/d19/: d19a.cpp  d19b.cpp
2021/ante/d2/: d2a.cpp  d2b.cpp
2021/ante/d20/: d20a.cpp  d20b.cpp
2021/ante/d21/: d21a.cpp  d21b.cpp
2021/ante/d22/: d22a.cpp  d22b.cpp
2021/ante/d23/: d23a.cpp  d23b.cpp
2022/dsantl/: .gitignore
2022/matija/: Cargo.toml
2023/matija/: .gitignore  Cargo.toml
2023/matija/d01/: d01p1.rs  d01p2.rs  part1.rs  part2.rs
2023/matija/d02/: part1.rs  part2.rs
2023/matija/d03/: part1.rs  part2.rs
2023/matija/d04/: part1.rs  part2.rs
2023/matija/d05/: part1.rs  part2.rs
2023/matija/d06/: part1.rs  part2.rs
2023/matija/d07/: part1.rs  part2.rs
2023/matija/d08/: part1.rs  part2.rs
2023/matija/d09/: part1.rs  part2.rs
2023/matija/d10/: part1.rs  part2.rs
2023/matija/d11/: part1.rs  part2.rs
2023/matija/d12/: part1.rs  part2.rs
2023/matija/d13/: part1.rs  part2.rs
2023/matija/d14/: part1.rs  part2.rs
2023/matija/d15/: part1.rs  part2.rs
2023/matija/d16/: part1.rs  part2.rs
2023/matija/d17/: part1.rs  part2.rs
2023/matija/d18/: part1.rs  part2.rs
2023/matija/d19/: part1.rs  part2.rs
2023/matija/d20/: part1.rs  part2.rs
2023/matija/d21/: part1.rs  part2.rs
2023/matija/d22/: part1.rs  part2.rs
2023/matija/d23/: part1.rs  part2.rs
2023/matija/d24/: part1.rs  part2.rs
2023/matija/d25/: part1.rs
2024/matija/: .gitignore
21/mirof/: task_1.hs  task_2.hs
22/paljak/: large.hs  small.hs
23/mirof/: task_1.hs
23/paljak/: large.hs  small.hs
24/mirof/: task_1.hs  task_2.hs
25/mirof/: task_1.hs
25/paljak/: small.hs
3/mirof/: task_1.hs
3/paljak/: large.hs
4/mirof/: task_2.hs
4/paljak/: large.hs  small.hs
5/mirof/: task_1.hs
5/paljak/: large.hs  small.hs
6/mirof/: task_1.hs
7/mirof/: task_2.hs
7/paljak/: large.hs
8/mirof/: task_1.hs  task_2.hs
8/paljak/: large.hs
9/mirof/: task_2.hs
9/paljak/: large.hs
(+878 files in other folders)
