[package]
name = "aoc2023"
authors = ["matija@tbtl.com"]
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "d01p1"
path = "d01/d01p1.rs"

[[bin]]
name = "d01p2"
path = "d01/d01p2.rs"

[[bin]]
name = "d02p1"
path = "d02/part1.rs"

[[bin]]
name = "d02p2"
path = "d02/part2.rs"

[[bin]]
name = "d03p1"
path = "d03/part1.rs"

[[bin]]
name = "d03p2"
path = "d03/part2.rs"

[[bin]]
name = "d04p1"
path = "d04/part1.rs"

[[bin]]
name = "d04p2"
path = "d04/part2.rs"
