[package]
name = "aoc2023"
authors = ["matija@tbtl.com"]
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "d01p1"
path = "d01/part1.rs"

[[bin]]
name = "d01p2"
path = "d01/part2.rs"

[[bin]]
name = "d02p1"
path = "d02/part1.rs"

[[bin]]
name = "d02p2"
path = "d02/part2.rs"

[[bin]]
name = "d03p1"
path = "d03/part1.rs"

[[bin]]
name = "d03p2"
path = "d03/part2.rs"

[[bin]]
name = "d04p1"
path = "d04/part1.rs"

[[bin]]
name = "d04p2"
path = "d04/part2.rs"

[[bin]]
name = "d05p1"
path = "d05/part1.rs"

[[bin]]
name = "d05p2"
path = "d05/part2.rs"

[[bin]]
name = "d06p1"
path = "d06/part1.rs"

[[bin]]
name = "d06p2"
path = "d06/part2.rs"

[[bin]]
name = "d07p1"
path = "d07/part1.rs"

[[bin]]
name = "d07p2"
path = "d07/part2.rs"

[[bin]]
name = "d08p1"
path = "d08/part1.rs"

[[bin]]
name = "d08p2"
path = "d08/part2.rs"

[[bin]]
name = "d09p1"
path = "d09/part1.rs"

[[bin]]
name = "d09p2"
path = "d09/part2.rs"

[[bin]]
name = "d10p1"
path = "d10/part1.rs"

[[bin]]
name = "d10p2"
path = "d10/part2.rs"

[[bin]]
name = "d11p1"
path = "d11/part1.rs"

[[bin]]
name = "d11p2"
path = "d11/part2.rs"

[[bin]]
name = "d12p1"
path = "d12/part1.rs"

[[bin]]
name = "d12p2"
path = "d12/part2.rs"

[[bin]]
name = "d13p1"
path = "d13/part1.rs"

[[bin]]
name = "d13p2"
path = "d13/part2.rs"
